[gd_scene load_steps=14 format=2]

[ext_resource path="res://GameObjects/Tiles/LeverTile/Texture/LeverTexture.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/ResultPanel.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Rubik/Rubik-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/Amiko/Amiko-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Fonts/Rubik/Rubik-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Fonts/Rubik/Rubik-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Components/ScorePanel/ScorePanel.gd" type="Script" id=7]


[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[node name="ScorePanel" type="CanvasLayer"]
layer = 10
script = ExtResource( 7 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -116.0
margin_right = 192.0
margin_bottom = 116.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Level" type="Label" parent="NinePatchRect"]
anchor_right = 1.0
margin_top = 16.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "LEVEL 1"
align = 1
valign = 1

[node name="Continue" type="Button" parent="NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 16.0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 10

[node name="Label" type="Label" parent="NinePatchRect/Continue/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Continue"
align = 1
valign = 1

[node name="MainMenu" type="Button" parent="NinePatchRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = 166.0
margin_bottom = 16.0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 10

[node name="Label" type="Label" parent="NinePatchRect/MainMenu/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Main Menu"
align = 1
valign = 1

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_right = 41.0
margin_bottom = -1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "SCORE"
align = 1

[node name="QuizScore" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -68.0
margin_right = 41.0
margin_bottom = -39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "3/3"
align = 1
valign = 1

[node name="PuzzleTimer" type="VBoxContainer" parent="NinePatchRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = 4.0
margin_right = 146.0
margin_bottom = 46.0
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/PuzzleTimer"]
margin_right = 122.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Puzzle Time"
align = 1
valign = 1

[node name="Time" type="Label" parent="NinePatchRect/PuzzleTimer"]
margin_top = 23.0
margin_right = 122.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "00mins : 00secs"
align = 1
valign = 1

[node name="QuizTimer" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -144.0
margin_top = 4.0
margin_right = -22.0
margin_bottom = 46.0
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/QuizTimer"]
margin_right = 122.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Quiz Time"
align = 1
valign = 1

[node name="Time" type="Label" parent="NinePatchRect/QuizTimer"]
margin_top = 23.0
margin_right = 122.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "00mins : 00secs"
align = 1
valign = 1
